fixed logo alignment

--- a/client/src/App.css
+++ b/client/src/App.css
@@ -10,20 +10,17 @@
 }
 
 .login-window-border {
-    position: absolute;
-    top: 0;
-    bottom: 0;
-    left: 0;
-    right: 0;
     max-width: 50%;
     width: fit-content;
     height: fit-content;
-    margin: auto;
+    margin: 10px auto;
     border-radius: 10px;
     box-shadow: 0px 0px 20px lightgray;
 }
 
 .login-window {
+    padding-top: 10px;
+    padding-bottom: 10px;
     margin: 30px;
 }
 
@@ -62,4 +59,6 @@
 .login-text {
     display: block;
     text-align: center;
+    padding-top: 10px;
+    padding-bottom: 10px;
 }
